Fixed wrapping in language text mouse over.

--- a/admin/src/widgets/multilingual-text-field.scss
+++ b/admin/src/widgets/multilingual-text-field.scss
@@ -89,6 +89,7 @@
             padding: 6px 4px 4px 4px;
             margin-left: 1em;
             margin-right: 1em;
+            white-space: pre-line;
         }
     }
 
